[package]
name = "y4m"
version = "0.5.1"
authors = ["Kagami Hiiragi <kagami@genshiken.org>"]
description = "YUV4MPEG2 (.y4m) Encoder/Decoder."
keywords = ["y4m", "YUV4MPEG2", "video", "decoder", "encoder"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/image-rs/y4m"
repository = "https://github.com/image-rs/y4m.git"
documentation = "http://docs.piston.rs/y4m/y4m/"

[dev-dependencies]
resize = "0.3.0"
